사이드바 완성

--- a/index.html
+++ b/index.html
@@ -4,36 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="dist/css/reset.css" />
+    <link rel="stylesheet" href="dist/css/styles.css" />
     <title>Document</title>
   </head>
-  <header>
-    <h1>Best Horror Scenes</h1>
-    <div>
-      <p>
-        An ever growing collection featuring some of the best scenes in horror.
-      </p>
-      <p>
-        “Best Horror Scenes” is a collection of scenes I feel are some of the
-        most affecting in horror. Some may be simple black cat scares, others
-        may be more subdued or nuanced. Many come from films that aren't
-        necessarily “horror” but have elements or threads of horror.
-      </p>
-      <nav>
-        <a href="">Newsletter</a>
-        <a href="">Suggest a Scene</a>
-        <a href="">YouTube</a>
-        <a href="">Twitter</a>
-        <a href="">Contact</a>
-        <a href="">RSS</a>
-        <a href="">Letterboxd</a>
-      </nav>
-      <p>
-        Best Horror Scenes is a love letter to the Horror film genre by Brandon
-        Durham. Most film clips contain major spoilers, and it is recommended
-        you don’t watch the clip if you plan on seeing the film.
-      </p>
-    </div>
-  </header>
-  <body></body>
+  <body>
+    <header>
+      <h1>Best Horror Scenes</h1>
+      <div>
+        <h3>
+          An ever growing collection featuring some of the best scenes in
+          horror.
+        </h3>
+        <p>
+          “Best Horror Scenes” is a collection of scenes I feel are some of the
+          most affecting in horror. Some may be simple black cat scares, others
+          may be more subdued or nuanced. Many come from films that aren't
+          necessarily “horror” but have elements or threads of horror.
+        </p>
+        <nav>
+          <ul>
+            <li><a href="#">Newsletter</a></li>
+            <li><a href="#">Suggest a Scene</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">RSS</a></li>
+            <li><a href="#">Letterboxd</a></li>
+          </ul>
+        </nav>
+        <p>
+          Best Horror Scenes is a love letter to the Horror film genre by
+          Brandon Durham. Most film clips contain major spoilers, and it is
+          recommended you don’t watch the clip if you plan on seeing the film.
+        </p>
+      </div>
+    </header>
+    <main>
+      <h3>Currently viewing everything sorted by random .</h3>
+    </main>
+  </body>
   <footer></footer>
 </html>
