메인 화면 작업중

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="side-header">
       <h1>Best Horror Scenes</h1>
       <div>
         <h3>
@@ -41,7 +41,34 @@
       </div>
     </header>
     <main>
-      <h3>Currently viewing everything sorted by random .</h3>
+      <div class="main__top">
+        <span>Currently viewing</span>
+        <a href="#">everything</a>
+        <span>sorted by</span>
+        <a href="#">random</a>
+        <span>.</span>
+      </div>
+      <div class="main__content">
+        <header class="main__content-header">
+          <div class="header__title">
+            <h1>
+              <!-- <a href="#">#</a> -->
+              The Blair Witch Project (1999)
+            </h1>
+          </div>
+          <div class="header__author">
+            <div>Directed by</div>
+            <div>Daniel Myrick, Eduardo Sánchez</div>
+          </div>
+        </header>
+        <div class="main__content-image">
+          <div class="image__entryNumber">
+            <div>#</div>
+            <div>45</div>
+          </div>
+          <img src="images/blairwitchproject.jpg" />
+        </div>
+      </div>
     </main>
   </body>
   <footer></footer>
