--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <link rel="stylesheet" href="dist/css/reset.css" />
     <link rel="stylesheet" href="dist/css/styles.css" />
-    <title>Document</title>
+    <title>Best Horror Scenes</title>
   </head>
   <body>
     <header class="side-header">
@@ -51,10 +53,7 @@
       <div class="main__content">
         <header class="main__content-header">
           <div class="header__title">
-            <h1>
-              <!-- <a href="#">#</a> -->
-              The Blair Witch Project (1999)
-            </h1>
+            <h1>The Blair Witch Project (1999)</h1>
           </div>
           <div class="header__author">
             <div>Directed by</div>
@@ -67,6 +66,66 @@
             <div>45</div>
           </div>
           <img src="images/blairwitchproject.jpg" />
+        </div>
+        <div class="main__content-rating">My rating: 7 / 10</div>
+        <div class="main__content-bottom">
+          <div>No Comments</div>
+          <div>
+            <i class="fas fa-comment"></i>
+            Leave a Comment
+          </div>
+        </div>
+      </div>
+      <div class="main__content">
+        <header class="main__content-header">
+          <div class="header__title">
+            <h1>Hellraiser (1987)</h1>
+          </div>
+          <div class="header__author">
+            <div>Directed by</div>
+            <div>Clive Barker</div>
+          </div>
+        </header>
+        <div class="main__content-image">
+          <div class="image__entryNumber">
+            <div>#</div>
+            <div>32</div>
+          </div>
+          <img src="images/hellraiser.jpg" />
+        </div>
+        <div class="main__content-rating">My rating: 7 / 10</div>
+        <div class="main__content-bottom">
+          <div>No Comments</div>
+          <div>
+            <i class="fas fa-comment"></i>
+            Leave a Comment
+          </div>
+        </div>
+      </div>
+      <div class="main__content">
+        <header class="main__content-header">
+          <div class="header__title">
+            <h1>Hereditary (2018)</h1>
+          </div>
+          <div class="header__author">
+            <div>Directed by</div>
+            <div>Ari Aster</div>
+          </div>
+        </header>
+        <div class="main__content-image">
+          <div class="image__entryNumber">
+            <div>#</div>
+            <div>38</div>
+          </div>
+          <img src="images/hereditary.jpg" />
+        </div>
+        <div class="main__content-rating">My rating: 7 / 10</div>
+        <div class="main__content-bottom">
+          <div>No Comments</div>
+          <div>
+            <i class="fas fa-comment"></i>
+            Leave a Comment
+          </div>
         </div>
       </div>
     </main>
