내용 추가중

--- a/index.html
+++ b/index.html
@@ -2,9 +2,86 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dest/css/styles.css" />
-    <title>(S)CSS Masterclass</title>
+    <link rel="stylesheet" href="dest/css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <title>Paintbox</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="header__nav">
+        <ul class="header__nav__ul-left">
+          <li>
+            <a href="#">Nail Studio</a>
+          </li>
+          <li>
+            <a href="#">Shop Product</a>
+          </li>
+        </ul>
+        <img class="logo" src="images/logo.jpg" />
+        <ul class="header__nav__ul-right">
+          <li>
+            <a href="#">Journal</a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-bag-shopping"></i>
+              0
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="first">
+        <div class="first__img">
+          <img src="images/1.jpg" />
+        </div>
+        <div class="first__content">
+          <div class="first__text">
+            <div>SS'22 Power Couple</div>
+            <div>Now introducing our brand-new summer duo:</div>
+            <div>Like Babe + Like Coral</div>
+          </div>
+          <div class="first__button">
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="second">
+        <img class="second__img" src="images/2.jpg" />
+        <div class="second__content">
+          <div class="second__text">
+            Meet your new go-to Tote Bag for summer. Neutral with holographic
+            foil lettering, it's the perfect modern accessory that goes with
+            everything.
+          </div>
+          <div class="second__button">
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="third">
+        <img class="third__img" src="images/3.jpg" />
+        <div class="third__content">
+          <div class="third__title">Our Studio</div>
+          <div class="third__text">
+            Book new nails at our Upper East Side studio.
+          </div>
+          <div class="third__button">
+            <a href="#">Book a menicure<span>&rarr;</span> </a>
+          </div>
+        </div>
+      </div>
+      <div class="fourth">
+        <img src="images/4-1.jpg" />
+        <img src="images/4-2.jpg" />
+        <img src="images/4-3.jpg" />
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
