4번째 컨텐츠 완료

--- a/index.html
+++ b/index.html
@@ -77,9 +77,27 @@
         </div>
       </div>
       <div class="fourth">
-        <img src="images/4-1.jpg" />
-        <img src="images/4-2.jpg" />
-        <img src="images/4-3.jpg" />
+        <div class="fourth__title">
+          <div>The Shop</div>
+          <div>Our Newest Polish Colors</div>
+        </div>
+        <div class="fourth__content">
+          <img src="images/4-1.jpg" />
+          <img src="images/4-2.jpg" />
+          <img src="images/4-3.jpg" />
+          <span class="fourth__content__category">Power Couple | New!</span>
+          <span class="fourth__content__category">Nail Lacquer</span>
+          <span class="fourth__content__category">Power Couple</span>
+          <span class="fourth__content__name">Like Babe + Like Coral</span>
+          <span class="fourth__content__name">Like French</span>
+          <span class="fourth__content__name">Like Canyon + Like Electric</span>
+          <span class="fourth__content__price">$40.00</span>
+          <span class="fourth__content__price">$22.00</span>
+          <span class="fourth__content__price">$40.00</span>
+          <span class="fourth__content__button">Add to cart</span>
+          <span class="fourth__content__button">Add to cart</span>
+          <span class="fourth__content__button">Add to cart</span>
+        </div>
       </div>
     </main>
     <footer></footer>
