6번째 컨텐츠 완료

--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
           <span class="fifth__content__button">Read Story &rarr;</span>
         </div>
       </div>
+      <div class="sixth">
+        <span class="sixth__title">Join our conversation</span>
+        <span class="sixth__text">
+          Be the first to hear about new product launches and enjoy 15% off your
+          first polish order.
+        </span>
+        <div class="sixth__button">
+          <input type="text" placeholder="Enter your email" />
+          <button>&rarr;</button>
+        </div>
+      </div>
+      <div class="seventh"></div>
     </main>
     <footer></footer>
   </body>
