7번째 컨텐츠 완료

--- a/index.html
+++ b/index.html
@@ -138,7 +138,16 @@
           <button>&rarr;</button>
         </div>
       </div>
-      <div class="seventh"></div>
+      <div class="seventh">
+        <img src="images/6-1.jpg" />
+        <img src="images/6-2.jpg" />
+        <img src="images/6-3.jpg" />
+        <img src="images/6-4.jpg" />
+        <img src="images/6-5.jpg" />
+        <img src="images/6-6.jpg" />
+        <img src="images/6-7.jpg" />
+        <img src="images/6-8.jpg" />
+      </div>
     </main>
     <footer></footer>
   </body>
