8번째 컨텐츠 완료

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
         <img src="images/6-7.jpg" />
         <img src="images/6-8.jpg" />
       </div>
+      <div class="eighth">
+        <span>Follow us at</span>
+        <span>@paintboxnails</span>
+      </div>
     </main>
     <footer></footer>
   </body>
