--- a/index.html
+++ b/index.html
@@ -153,6 +153,30 @@
         <span>@paintboxnails</span>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer__contents">
+        <div class="footer__content">
+          <div class="footer__content__title"><span>Support</span></div>
+          <span>F.A.Q.</span>
+          <span>Privacy Policy</span>
+          <span>Teams and Conditions</span>
+          <span>Accessibility</span>
+        </div>
+        <div class="footer__content">
+          <div class="footer__content__title"><span>Follow us</span></div>
+          <span>Instagram</span>
+          <span>Pinterest</span>
+          <span>Facebook</span>
+          <span>Newsletter</span>
+        </div>
+        <div class="footer__content">
+          <div class="footer__content__title"><span>Paintbox</span></div>
+          <span>Our studio</span>
+          <span>Careers</span>
+          <span>Prees</span>
+          <span>Contact us</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
