--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             Book new nails at our Upper East Side studio.
           </div>
           <div class="third__button">
-            <a href="#">Book a menicure<span>&rarr;</span> </a>
+            <a href="#">Book a menicure </a>
+            <button>&rarr;</button>
           </div>
         </div>
       </div>
