세번째 버튼 수정

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             Book new nails at our Upper East Side studio.
           </div>
           <div class="third__button">
-            <a href="#">Book a menicure </a>
-            <button>&rarr;</button>
+            <span href="#">Book a menicure </span>
+            <span class="third__button__rarr">&rarr;</span>
           </div>
         </div>
       </div>
