--- a/10x19/index.html
+++ b/10x19/index.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <div class="logo">
-      <span>10</span>
-      <span>X</span>
-      <span>19</span>
+      <img src="images/logo.png" />
     </div>
-    <span class="center_emptybox"></span>
+    <span></span>
     <div class="menu">MENU</div>
     <div class="homeLeft">
       <div>#10</div>
@@ -29,20 +27,13 @@
       <div>#2</div>
       <div>#1</div>
     </div>
-    <span class="left_emptybox"></span>
+    <span></span>
     <div class="news">
-      <div>
-        <div>
-          Thirty-four artists visually interpret and countdown their favorite
-          albums of 2019 <span>•</span>
-        </div>
-        <div>
-          Thirty-four artists visually interpret and countdown their favorite
-          albums of 2019
-        </div>
-      </div>
+      <span
+        >Thirty-four artists visually interpret and countdown their favorite
+        albums of 2019</span
+      >
     </div>
-
-    <span class="right_emptybox"></span>
+    <span></span>
   </body>
 </html>
