--- a/10x19/index.html
+++ b/10x19/index.html
@@ -19,7 +19,9 @@
       <div>#7</div>
       <div>#6</div>
     </div>
-    <div class="main"></div>
+    <div class="main">
+      <img src="images/main.jpg" />
+    </div>
     <div class="homeRight">
       <div>#5</div>
       <div>#4</div>
