--- a/index.html
+++ b/index.html
@@ -76,7 +76,58 @@
           <span>Find out more <em>About us</em></span>
         </div>
       </div>
+      <div class="images">
+        <img src="images/3-1.jpg" />
+        <img src="images/3-2.jpg" />
+        <img src="images/3-3.jpg" />
+        <img src="images/3-4.jpg" />
+        <img src="images/3-5.jpg" />
+        <img src="images/3-6.jpg" />
+        <img src="images/3-7.jpg" />
+        <img src="images/3-8.jpg" />
+        <img src="images/3-9.jpg" />
+        <img src="images/3-10.jpg" />
+        <img src="images/3-11.jpg" />
+        <img src="images/3-12.jpg" />
+      </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <div>
+          <span class="category">Products:</span>
+          <span>Lounge Chairs</span>
+          <span>Sofas</span>
+          <span>Daybeds</span>
+          <span>Poufs</span>
+          <span>Dining Chairs</span>
+          <span>Stools</span>
+          <span>Tables & Desks</span>
+          <span>Storage</span>
+        </div>
+        <div>
+          <span class="category">Useful information:</span>
+          <span>Our stockists</span>
+          <span>Our designers</span>
+          <span>Product care</span>
+        </div>
+        <div>
+          <span class="category">Company:</span>
+          <span>News</span>
+          <span>About us</span>
+          <span>Contact us</span>
+        </div>
+        <div>
+          <span class="category">Connect with us:</span>
+          <span>Facebook</span>
+          <span>Instagram</span>
+          <span class="category">Access to:</span>
+          <span>Client login</span>
+        </div>
+      </div>
+      <div>
+        <span>All rights reserved Tolv © 2022</span>
+        <img src="images/footer__logo.jpg" />
+      </div>
+    </footer>
   </body>
 </html>
