--- a/index.html
+++ b/index.html
@@ -28,7 +28,196 @@
       </div>
     </header>
     <main>
-      <div class="posters"></div>
+      <div class="posters">
+        <section class="poster">
+          <img src="images/1.jpg" />
+          <p>
+            Ran an die Nadeln! Der Häkel-Trend ist gekommen, um zu bleiben! Wir
+            haben auch für alle Handarbeits-Verweigerer das Beste aus den
+            Onlineshops zusammengesucht!
+          </p>
+          <div>
+            <span>Shopping</span>
+            <span>29.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/2.jpg" />
+          <p>
+            Relaxte Ohrringe. Relaxte Streifen. Relaxte Regeln bei Bekleidung
+            für Sportlerinnen. Das wünschen wir uns. Chillt doch alle mal!
+          </p>
+          <div>
+            <span>News</span>
+            <span>26.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/3.jpg" />
+          <p></p>
+          <div>
+            <span>Best-of</span>
+            <span>20.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/4.jpg" />
+          <p></p>
+          <div>
+            <span>News</span>
+            <span>19.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <!-- <section class="poster">
+          <img src="images/5.jpg" />
+          <p>
+            In der Sammlung des Bröhan-Museums stehen 99 Künstlerinnen 1.000
+            Künstlern gegenüber. Von den circa 20.000 Sammlungsobjekten sind nur
+            etwa 1.500 von Frauen. Was sind die Gründe für dieses
+            Ungleichgewicht?
+          </p>
+          <div>
+            <span>Kolumne</span>
+            <span>18.7.22</span>
+            <span>Julia Meyer-Brehm</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/6.jpg" />
+          <p>
+            Das deutsch-dänische Schmuckbrand gehört seit einem Jahrzehnt
+            unwiderruflich zu Berlin. Dabei wohnt Chanette Anderson gar nicht
+            mehr hier. Wir haben mit ihr gesprochen und sie gefragt, wie man ein
+            Unternehmen aus einem anderen Land führt
+          </p>
+          <div>
+            <span>Interview</span>
+            <span>14.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/7.jpg" />
+          <p>
+            Keine Sorge, noch gehen wir nicht in die Sommerpause, sondern freuen
+            uns über den Sommer in Deutschland und jede Menge knallbunte News!
+          </p>
+          <div>
+            <span>News</span>
+            <span>12.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/8.gif" />
+          <p></p>
+          <div>
+            <span>Shopping</span>
+            <span>11.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/9.jpg" />
+          <p>
+            Wir haben den Designklassiker aus Norwegen mit auf eine Tour durch
+            Berlin genommen
+          </p>
+          <div>
+            <span>Editorial</span>
+            <span>7.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section> -->
+        <!-- <section class="poster">
+          <img src="images/10.jpg" />
+          <p>
+            Die Schweißperlen laufen, die Haut spannt, der erste Sonnenbrand ist
+            da! Ein Glück verrät Sarah uns, wie wir unsere Beauty-Routine für
+            die nächsten Sommermonate ändern können, damit der Urlaub nicht nur
+            euch, sondern auch eure Haut entspannt
+          </p>
+          <div>
+            <span>Tipps</span>
+            <span>6.7.22</span>
+            <span>Sarah Khurshid</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/11.jpg" />
+          <p>
+            Die News in dieser Woche kommen besonders knackig, sonnig und voller
+            Fernweh daher, denn diese Woche wird bei BEIGE gefeiert, was das
+            Zeug hält
+          </p>
+          <div>
+            <span>News</span>
+            <span>5.7.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/12.jpg" />
+          <p></p>
+          <div>
+            <span>Tipps</span>
+            <span>30.6.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/13.jpg" />
+          <p>
+            Den ganzen Tag können Berliner:innen und Gäst:innen die
+            Ausstellungen kostenlos besuchen
+          </p>
+          <div>
+            <span>Tipps</span>
+            <span>30.6.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/14.jpg" />
+          <p>
+            Den ganzen Tag können Berliner:innen und Gäst:innen die
+            Ausstellungen kostenlos besuchen
+          </p>
+          <div>
+            <span>Tipps</span>
+            <span>30.6.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/15.jpg" />
+          <p>
+            Den ganzen Tag können Berliner:innen und Gäst:innen die
+            Ausstellungen kostenlos besuchen
+          </p>
+          <div>
+            <span>Tipps</span>
+            <span>30.6.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section>
+        <section class="poster">
+          <img src="images/16.jpg" />
+          <p>
+            Den ganzen Tag können Berliner:innen und Gäst:innen die
+            Ausstellungen kostenlos besuchen
+          </p>
+          <div>
+            <span>Tipps</span>
+            <span>30.6.22</span>
+            <span>Marie Jaster</span>
+          </div>
+        </section> -->
+      </div>
     </main>
     <footer></footer>
   </body>
